tests/try/then_when.stderr
error: Only "and_then" is allowed inside "then" section
 --> tests/try/then_when.rs:9:17
  |
9 |                 'when_something: {
  |                 ^^^^^^^^^^^^^^^
